--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -45,6 +45,7 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.google.android.play:core:1.9.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
